--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "regex-test-preview",
   "displayName": "Regex Test Preview",
-  "description": "A VSCode extension for testing and previewing regular expressions with real-time highlighting",
-  "version": "0.0.3",
+  "description": "A minimal VSCode extension for testing regular expressions with real-time highlighting directly in the text",
+  "version": "1.0.0",
   "publisher": "qinxiao",
   "repository": {
     "type": "git",
